Update 06types.mdx, fix Java naming of anonymous

--- a/docs/howtos/DataPlane Generation - DPG/06types.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/06types.mdx
@@ -107,7 +107,7 @@ TODO;
 <TabItem value="java" label="Java" >
 
 ```java
-public enum Horizontal {
+public enum WidgetHorizontal {
    LEFT("left"),
    RIGHT("right");
 }
@@ -218,7 +218,7 @@ TODO;
 <TabItem value="java" label="Java" >
 
 ```java
-public final class Color extends ExpandableStringEnum<Colors> {
+public final class WidgetColor extends ExpandableStringEnum<Colors> {
     public static final Color RED = fromString("red");
     public static final Color BLUE = fromString("blue");
 }
@@ -412,7 +412,7 @@ TODO;
 <TabItem value="java" label="Java" >
 
 ```java
-public enum Orientation {
+public enum WidgetOrientation {
    LEFT("left"),
    RIGHT("right"),
    UP("up"),
